# model-archaeologist

./: README.md  pyproject.toml
model_archaeologist/: __init__.py  analyzer.py  chunker.py  cli.py  ingestion.py  renderer.py  schema.py
model_archaeologist/templates/: report.md.j2
tests/: __init__.py  test_chunker.py  test_ingestion.py  test_renderer.py  test_schema.py
